Complete implementation update based updated API dev (1.1.0)
