# src/main/java/at/srfg/robxtask/service/VersionController.java
@@ -1,36 +1,0 @@
-package at.srfg.robxtask.service;
-
-import at.srfg.robxtask.swagger.api.VersionApi;
-import at.srfg.robxtask.swagger.model.Version;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.RestController;
-
-import javax.servlet.http.HttpServletRequest;
-
-/**
- * Forked from autogenerated code
- * author: fstroh
- */
-@RestController
-public class VersionController implements VersionApi {
-
-    private static final Logger log = LoggerFactory.getLogger(VersionController.class);
-
-    @Autowired
-    public VersionController(ObjectMapper objectMapper, HttpServletRequest request) {
-    }
-
-    @Override
-    public ResponseEntity<at.srfg.robxtask.swagger.model.Version> getVersion() {
-        return new ResponseEntity<Version>(
-                new Version()
-                        .serviceId("registration-service")
-                        .version("1.1.0"),
-                HttpStatus.OK);
-    }
-}
