# src/main/resources/openapi3.yaml
@@ -1,8 +1,10 @@
-openapi: 3.0.1
+# YAML-Inputfile for the code generator integrated in the registration-service (spring generator from the openapi-generator-maven-plugin)
+# for testing and client code generators please use to the autogenerated OPENAPI docs available from a running service instance
+openapi: 3.0.3
 info:
   title: ROBxTASK Registration Service
-  description: This is the interface definition of a registration service for ROBxTASK
-    (registration-service).
+  description: This is the interface definition of the registration service for ROBxTASK
+    (registration-service). It manages the registration of robotic skills, tasks and processes.
   termsOfService: https://robxtask.salzburgresearch.at/legal-notice/
   contact:
     email: fstroh@gmail.com
@@ -11,33 +13,19 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   version: 1.1.0
 externalDocs:
-  description: Find out more about ROBxTASK
-  url: http://robxtask.salzburgresearch.at
+  description: Find out more about the ROBxTASK platform
+  url: https://robxtask.salzburgresearch.at/
 servers:
-  - url: /v1
-tags:
-  - name: device-controller
-    description: Retrieve, create and manipulate single devices
-    externalDocs:
-      description: Source Code
-      url: https://github.com/ROBxTASK/registration-service
-  - name: devices-controller
-    description: Retrieve multiple devices
-    externalDocs:
-      description: Source Code
-      url: https://github.com/ROBxTASK/registration-service
-  - name: version-controller
-    description: Retrieve service identifier and version number
-    externalDocs:
-      description: Source Code
-      url: https://github.com/ROBxTASK/registration-service
+  - url: http://localhost:8080/registration-service/
+    description: Local development server
+  - url: https://robxtask.salzburgresearch.at/robxtask/registration-service/
+    description: Staging server
 paths:
   /version:
     get:
       operationId: getVersion
       tags:
         - version
-        - version-controller
       description:
         get the service id and version string
       responses:
@@ -52,7 +40,6 @@ paths:
       operationId: getDeviceById
       tags:
         - device
-        - device-controller
       description:
         get a specific device object by its id
       parameters:
@@ -69,12 +56,20 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Device'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
+        404:
+          description: Device Not Found
+          content: {}
+
+      security:
+      - register_device_key: []
+
   /device:
     put:
       operationId: updateDevice
       tags:
         - device
-        - device-controller
       description: update a specific device object by its id
       requestBody:
         description: Device object that shall be updated
@@ -97,11 +92,13 @@ paths:
           description: Validation exception
           content: {}
       x-codegen-request-body-name: body
+      security:
+        - register_device_key: []
+
     post:
       operationId: addDevice
       tags:
         - device
-        - device-controller
       description: post a device new object
       requestBody:
         description: Device object that needs to be added
@@ -109,11 +106,14 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/Device'
-        required: false
+        required: true
       responses:
         201:
           description: device added
-          content: {}
+          content:
+            application/json:
+              schema:
+                type: object
         400:
           description: device post not successful, bad request.
           content: {}
@@ -121,12 +121,14 @@ paths:
           description: device not accepted, ID already existing
           content: {}
       x-codegen-request-body-name: body
+      security:
+        - register_device_key: []
+
   /devices:
     get:
       operationId: getDevices
       tags:
-        - device
-        - devices-controller
+        - devices
       description:
         get list of devices
       responses:
@@ -138,19 +140,33 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Device'
-  /secret:
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
+      security:
+        - register_device_key: []
+
+  /tasks:
     get:
-      summary: Return secret string
+      operationId: getTasks
+      tags:
+        - tasks
+      description:
+        get list of tasks - not yet implemented!
+        requires valid user / JWT token
       responses:
         200:
-          description: secret response
+          description: Successful response
           content:
-            '*/*':
+            application/json:
               schema:
-                type: string
+                type: array
+                items:
+                  $ref: '#/components/schemas/Task'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
       security:
-        - oauth2:
-            - uid
+        - register_task_auth: []
+
 components:
   schemas:
     Version:
@@ -174,7 +190,6 @@ components:
           description:
             Unique name of the skill, as defined below (MoveToLocation, SendMessage, etc.)
           enum:
-            - CommissionParts
             - DeliverObject
             - DetectObject
             - FetchObject
@@ -200,6 +215,7 @@ components:
           type: string
           enum: # possible values for the version field, i.e. the list of current and previous supported versions
             - V0.1
+            - V01
         SkillDescription:
           type: string
         SkillSlots:
@@ -208,8 +224,18 @@ components:
             $ref: '#/components/schemas/Slot'
         ReturnResult:
           $ref: '#/components/schemas/ReturnResult'
+          description:
+            ReturnResult of skill specifies the return value that is returned after the execution
+            of the skill. In most cases the return value will be boolean and indicate, whether
+            the skill was executed OK or not (NOK). In the skill definition, the specification
+            of the return result is optional, i.e. it can also be "void".
         Status:
           $ref: '#/components/schemas/Status'
+          description:
+            Describes the status during the execution of a robotic skill.
+            Maps to the "Feedback"-Concept when implementing the skill as a ROS Action.
+            In many cases, this will be a numeric value describing the completion percentage.
+            In the skill definition, the specification of "status" is optional.
 
     Slot:
       type: object
@@ -217,7 +243,6 @@ components:
         Defines a parameter slot for the robotic skill, if any.
       required:
         - SlotName
-        - SlotValues
       properties:
         SlotName:
           type: string
@@ -225,84 +250,47 @@ components:
             Unique name of the parameter, as defined by the ROBxTASK Version
             (e.g. Position, Location, OutputMessage, ...)
             There is a 1:n - Relation to the slot type, i.e. based on the SlotName, the SlotType is derived.
-            TODO -> Harmonisation with Wiki-Page!
-          enum: # MAY NEED FURTHER HARMONISATION !
-            - Actor # e.g. "Robot", "Device", "Person"
-            - AlarmThreshold
-            - Bool # (to inform caller about a potential result error)
-            - Condition # (mathematical or logical expression)
-            - Datetime # one specific date / time
-            - Endpoint # w.r.t. GetData & SetData, e.g. REST-Endpoint for GET/POST/PUT Methods
-            - Enum # (e.g., list of predefined position from which the user can choose)
-            - InputContent
-            - InputData
-            - InputMode
-            - Location # human-readable location (e.g., a specific room in the apartment)
-            - MeasurementInterval
-            - MessageContent # String "SendMessage"
-            - MessageType # enum "SendMessage", "OnReceiveMessage"
-            - Numeric # (also complex numerics, e.g., position data)
-            - Object # (tangible objects - e.g., glass of water, apple, etc.)
-            - ObjectData
-            - ObjectDestinationLocation
-            - ObjectPosition
-            - ObjectTargetLocation
-            - ObjectType
-            - Output # reference to an output, such as Shell/GUI/Logs, etc.
-            - OutputData
-            - OutputMessage # String "VoiceOutput", "GraphicalUserInteraction"
-            - Position # exact position (e.g. coordinates)
-            - RobotPosition
-            - String # (for text and complex information)
-            - Time # (for recurring events, e.g., every day at 00:00)
-            - Timestamp
-            - UserInput # (e.g., button press, touch input, voice input)
-            - UserOptions # enum "GraphicalUserInteraction"
+        SlotType:
+          $ref: '#/components/schemas/RxtDataType'
+          description:
+            The data type required for this slot. Given a specific ROBxTASK version,
+            this data type can be derived from the SlotName automatically. Therefore it is an optional.
         SlotValues:
           type: array
           items:
             type: string
           description:
-            Array of allowed values for the defined slot. This list shall be defined by the
+            Array of allowed values for the defined slot, if SlotType is "Enum". This list shall be defined by the
             implementor of the skill because it may differ from robot to robot depending on the use case.
             For example, if a robot provides predefined positions, such as "parking lot",
             "target position", "start position", etc., then the robot engineer can provide such values to
             help the task designer in the understanding of the specific skill.
-            If such values are provided, they will be presented as "enum" for the task designers, when creating
+            If such values are provided, they shall be presented as "enum" for the task designers, when creating
             processes using that skill, otherwise any value will be accepted.
             Also more specific SlotNames (such as "RobotPosition") are usually also represented as Strings.
+
     ReturnResult:
       type: object
       description:
-        ReturnResult specifies the return value that is returned after the execution of the skill.
-        In most cases the return value will be boolean and indicate, whether the skill was executed OK or not (NOK).
-        In the skill definition, the specification of the return result is optional, i.e. it can also be "void".
+        A return result specified by a name and its ROBxTASK data type.
       required:
         - ReturnResultType
         - ReturnResultName
       properties:
         ReturnResultType:
-          type: string
-          enum:
-            - Bool
-            - String
-            - Numeric
-            - Object
-            - Enum
+          $ref: '#/components/schemas/RxtDataType'
         ReturnResultName:
           type: string
     Status:
       type: object
       description:
-        Describes the status during the execution of a robotic skill. Maps to the "Feedback"-Concept when
-        implementing the skill as a ROS Action. In most cases, this will be a numeric value describing the
-        completion percentage. In the skill definition, the specification of "status" is optional.
+        A status value defined by a name and its ROBxTASK data type.
       required:
         - StatusType
         - StatusName
       properties:
         StatusType:
-          type: string
+          $ref: '#/components/schemas/RxtDataType'
         StatusName:
           type: string
 
@@ -348,6 +336,7 @@ components:
               Passing the start-direction will make QBO go back to its original starting position."
             SkillSlots:
               - SlotName: Location
+                SlotType: Enum
                 SlotValues: [ "up", "down", "left", "right", "start" ]
         ConfigParams:
           - Key: "ROS Master URI"
@@ -365,11 +354,68 @@ components:
         Value:
           type: string
 
+    RxtDataType:
+      type: string
+      description:
+        Data types used in ROBxTASK.
+        In V0.1, only four types are supported (String, Numeric, Enum or Bool).
+      enum:
+        - String
+        - Numeric
+        - Enum
+        - Bool
+        # Some additional ROBxTASK data types (mainly subclasses of the above) were discussed during
+        # the stakeholder workshops. Can be introduced in future API versions.
+        # - Actor # e.g. "Robot", "Device", "Person"
+        # - AlarmThreshold
+        # - Condition # (mathematical or logical expression)
+        # - Datetime # one specific date / time
+        # - Endpoint # w.r.t. GetData & SetData, e.g. REST-Endpoint for GET/POST/PUT Methods
+        # - InputContent
+        # - InputData
+        # - InputMode
+        # - Location # human-readable location (e.g., a specific room in the apartment)
+        # - MeasurementInterval
+        # - MessageContent # String "SendMessage"
+        # - MessageType # enum "SendMessage", "OnReceiveMessage"
+        # - Object # (tangible objects - e.g., glass of water, apple, etc.)
+        # - ObjectData
+        # - ObjectDestinationLocation
+        # - ObjectPosition
+        # - ObjectTargetLocation
+        # - ObjectType
+        # - Output # reference to an output, such as Shell/GUI/Logs, etc.
+        # - OutputData
+        # - OutputMessage # String "VoiceOutput", "GraphicalUserInteraction"
+        # - Position # exact position (e.g. coordinates)
+        # - RobotPosition
+        # - Time # (for recurring events, e.g., every day at 00:00)
+        # - Timestamp
+        # - UserInput # (e.g., button press, touch input, voice input)
+        # - UserOptions # enum "GraphicalUserInteraction"
+    Task:
+      title: Task
+      type: object
+      properties:
+        TaskName:
+          type: string
+        TaskDescription:
+          type: string
+
+  responses:
+    UnauthorizedError:
+      description: Access token is missing or invalid
+
   securitySchemes:
-    oauth2:
-      type: oauth2
-      flows:
-        implicit:
-          authorizationUrl: http://tbd.example.com/oauth2/dialog
-          scopes:
-            uid: Unique identifier of the user accessing the service.
+    basic_auth:
+      type: http
+      scheme: basic
+      in: header
+    register_task_auth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+    register_device_key:
+      type: apiKey
+      name: register_device_key
+      in: query
